--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jaguarjs-jsdoc",
+  "name": "jaguarjs-esri",
   "version": "0.0.2",
   "description": "Jaguar.js template for JSDoc 3",
   "main": "Gruntfile.js",
