change name to hbbtv-jsdoc-template

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jaguarjs-jsdoc-patched",
+  "name": "hbbtv-jsdoc-template",
   "version": "0.0.5",
   "description": "A patched version of JaguarJS-JSDoc, for JSDoc 3",
   "main": "Gruntfile.js",
